--- a/ipynb/Distributed Systems and Errors/1 REST.ipynb
+++ b/ipynb/Distributed Systems and Errors/1 REST.ipynb
@@ -13,8 +13,8 @@
     "deepnote_cell_height": 279
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -27,7 +27,7 @@
     "execution_millis": 8757,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 811.5999755859375
+    "deepnote_cell_height": 639
    },
    "source": "from fastapi import FastAPI\n\nimport nest_asyncio\nimport uvicorn\n\napp = FastAPI()\n\n\n@app.put(\"/retrieve_payment/\")\nasync def retrieve_payment(message: Message):\n    message.event = \"Payment_Done\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n@app.put(\"/fetch_goods/\")\nasync def fetch_goods(message: Message):\n    message.event = \"Goods_Fetched\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n@app.put(\"/ship_goods/\")\nasync def ship_goods(message: Message):\n    message.event = \"Goods_Shipped\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\nnest_asyncio.apply()\nuvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
    "execution_count": null,
