--- a/ipynb/Distributed Systems and Errors/2 Message.ipynb
+++ b/ipynb/Distributed Systems and Errors/2 Message.ipynb
@@ -8,12 +8,12 @@
     "deepnote_variable_value": "TEAM10",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "6083972c",
-    "execution_start": 1648994271862,
-    "execution_millis": 41,
+    "execution_start": 1649012003664,
+    "execution_millis": 18,
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'TEAM10'",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -24,13 +24,13 @@
     "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "2f31b90",
-    "execution_start": 1649006495140,
-    "execution_millis": 2,
+    "execution_start": 1649012003682,
+    "execution_millis": 0,
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 2,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -40,30 +40,30 @@
     "deepnote_variable_value": "",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "845525ea",
-    "execution_start": 1649006544234,
-    "execution_millis": 3,
+    "execution_start": 1649012003683,
+    "execution_millis": 0,
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
    "metadata": {
     "cell_id": "51f784819c1447f682fda30e324b5b20",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f6465ed8",
-    "execution_start": 1649006576497,
-    "execution_millis": 1,
+    "execution_start": 1649012003684,
+    "execution_millis": 0,
     "is_code_hidden": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 106
+    "deepnote_cell_height": 74.80000305175781
    },
-   "outputs": [],
-   "execution_count": 4
+   "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
+   "execution_count": 4,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -72,13 +72,13 @@
     "cell_id": "06c15c41-7706-45d2-8f47-2cefae08450e",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "94d1c4be",
-    "execution_start": 1648994271905,
-    "execution_millis": 42,
+    "execution_start": 1649012003692,
+    "execution_millis": 46,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 405
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": []
   },
   {
@@ -87,14 +87,14 @@
     "cell_id": "049728cffb9e4208a8ed722cd6718d8a",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "df16a4b",
-    "execution_start": 1648994271948,
-    "execution_millis": 1741,
+    "source_hash": "d07d0a59",
+    "execution_start": 1649012003738,
+    "execution_millis": 1759,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 747
+    "deepnote_cell_height": 711
    },
-   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nif \"connection\" in locals() and connection.is_open:\n    connection.close()\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
-   "execution_count": null,
+   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
+   "execution_count": 6,
    "outputs": []
   },
   {
@@ -103,15 +103,15 @@
     "cell_id": "dca17cb53cf54dccb564fc4ea8715118",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "b12df0f2",
-    "execution_start": 1648994273694,
-    "execution_millis": 752,
+    "source_hash": "f09c4f91",
+    "execution_start": 1649012005498,
+    "execution_millis": 736,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 369
+    "deepnote_cell_height": 364.20001220703125
    },
-   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nif \"connection\" in locals() and connection.is_open:\n    connection.close()\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
-   "execution_count": null,
+   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
+   "execution_count": 7,
    "outputs": []
   },
   {
@@ -120,15 +120,19 @@
     "cell_id": "8695a13ad4be4662bee731325e74016e",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "2488d6f3",
-    "execution_start": 1648994274458,
-    "execution_millis": 9289,
+    "source_hash": "9f1fe116",
+    "execution_start": 1649012006240,
+    "execution_millis": 5017,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1233
+    "deepnote_cell_height": 1287,
+    "deepnote_output_heights": [
+     null,
+     611
+    ]
    },
-   "source": "import pika, pickle, requests\n\nparams = pika.URLParameters(amqp_url)\nif \"connection\" in locals() and connection.is_open:\n    connection.close()\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(\n        camunda_eninge_rest + \"/message\", json=request_data\n    )\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\n# Start consuming\nchannel.start_consuming()\nconnection.close()\n",
-   "execution_count": null,
+   "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "execution_count": 8,
    "outputs": []
   },
   {
