--- a/ipynb/Distributed Systems and Errors/2 Message.ipynb
+++ b/ipynb/Distributed Systems and Errors/2 Message.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "70c5e8874e5b48688d0e9e569da214c7",
     "deepnote_variable_name": "tenant",
     "deepnote_variable_value": "TEAM10",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "6083972c",
-    "execution_start": 1649012003664,
-    "execution_millis": 18,
+    "execution_start": 1649012553023,
+    "execution_millis": 54593,
+    "cell_id": "abfb23b1-57fe-47fc-a6a8-72672142ed4b",
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'TEAM10'",
@@ -19,29 +19,13 @@
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "58e044c24e8c4eb392180170939403c0",
-    "deepnote_variable_name": "camunda_eninge_rest",
-    "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "2f31b90",
-    "execution_start": 1649012003682,
-    "execution_millis": 0,
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "execution_count": 2,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "cell_id": "013f3d61dc3e46859673621cbfe77842",
     "deepnote_variable_name": "amqp_url",
     "deepnote_variable_value": "",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "845525ea",
-    "execution_start": 1649012003683,
-    "execution_millis": 0,
+    "execution_start": 1649012553025,
+    "execution_millis": 54608,
+    "cell_id": "00002-7596e2bc-dbcf-4258-a28c-7e34b1654b68",
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
@@ -51,13 +35,13 @@
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "51f784819c1447f682fda30e324b5b20",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f6465ed8",
-    "execution_start": 1649012003684,
-    "execution_millis": 0,
+    "execution_start": 1649012553026,
+    "execution_millis": 54606,
     "is_code_hidden": true,
+    "cell_id": "00003-8ba6ea93-0833-48d3-b5b3-751ec71421a1",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 74.80000305175781
    },
@@ -69,11 +53,11 @@
    "cell_type": "code",
    "metadata": {
     "tags": [],
-    "cell_id": "06c15c41-7706-45d2-8f47-2cefae08450e",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "94d1c4be",
-    "execution_start": 1649012003692,
-    "execution_millis": 46,
+    "execution_start": 1649012553028,
+    "execution_millis": 29,
+    "cell_id": "00004-f463a11a-5f2d-4054-931f-e6284f90df2f",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 405
    },
@@ -84,56 +68,64 @@
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "049728cffb9e4208a8ed722cd6718d8a",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "d07d0a59",
-    "execution_start": 1649012003738,
-    "execution_millis": 1759,
+    "source_hash": "f8342e48",
+    "execution_start": 1649012553059,
+    "execution_millis": 1031,
+    "cell_id": "00005-fff109ad-9258-4c94-ae61-72ae9851b506",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 711
+    "deepnote_cell_height": 261
    },
-   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
+   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\n\nconnection.close()\n",
    "execution_count": 6,
    "outputs": []
   },
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "dca17cb53cf54dccb564fc4ea8715118",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "f09c4f91",
-    "execution_start": 1649012005498,
-    "execution_millis": 736,
-    "output_cleared": true,
+    "source_hash": "a9daf20b",
+    "execution_start": 1649012554093,
+    "execution_millis": 752,
+    "output_cleared": false,
+    "cell_id": "00006-223d52fb-9d13-4ad2-99d0-8bcfeacd038f",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 364.20001220703125
    },
-   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
+   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange='', routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
    "execution_count": 7,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": "Message sent to consumer\n",
+     "output_type": "stream"
+    }
+   ]
   },
   {
    "cell_type": "code",
    "metadata": {
-    "cell_id": "8695a13ad4be4662bee731325e74016e",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "9f1fe116",
-    "execution_start": 1649012006240,
-    "execution_millis": 5017,
-    "output_cleared": true,
+    "source_hash": "430ef540",
+    "execution_start": 1649012554852,
+    "execution_millis": 7983,
+    "output_cleared": false,
+    "cell_id": "00007-855690d6-72cd-4728-86d0-bda14b42ab95",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1287,
-    "deepnote_output_heights": [
-     null,
-     611
-    ]
+    "deepnote_cell_height": 1126.800048828125
    },
-   "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange='', routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange='', routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange='', routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
    "execution_count": 8,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": "Received businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\n[Errno 9] Bad file descriptor\n",
+     "output_type": "stream"
+    }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +144,7 @@
   "deepnote": {
    "is_reactive": false
   },
-  "deepnote_notebook_id": "0d6370e8-8fde-42bb-82d5-1ea272d875d4",
+  "deepnote_notebook_id": "e392cfdc-c49d-4fee-9d22-52c0bfac7887",
   "deepnote_execution_queue": []
  }
 }
