--- a/ipynb/Distributed Systems and Errors/1 REST.ipynb
+++ b/ipynb/Distributed Systems and Errors/1 REST.ipynb
@@ -1,6 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": "# REST-Style",
+   "metadata": {
+    "cell_id": "51b63650c4b445c88f50b229cc9bd14e",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h1"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "*Characteristics:*\n- Collaboration Style: **Commands = Orchestration**\n- System Style: **Declarative**\n- Communication Style: **Synchronous (Blocking)**\n- Flow: **Managed**",
+   "metadata": {
+    "cell_id": "46ebe27fff6d4da2bca07d3d4123a968",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 181
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Process / Scenario",
+   "metadata": {
+    "cell_id": "159b9c46a213409e920579c3410e114e",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "![](/images/REST.png)\n\nThe following \"Order Fulfilment\" process model orchestrates three REST APIs which are defined below.\n\n### Tasks\nInstruction to run/do the exercise:\n1. Run the notebook in Deepnote.\n2. Allow incoming connections in Deepnote and copy the URL.\n3. Have a look at the service documentation generated: `<https://deepnote incoming connections URL>/docs`\n4. Download the process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/REST.bpmn)) and open it in Camunda Modeler.\n5. Adjust the URL in all the service tasks.\n6. Deploy the process model with Camunda Modeler to the classroom instance with your **tenant**.\n7. Run the process model from the Camunda Modeler.\n8. Investigate the process instanced in the Camunda Cockpit and inspect the Deepnote output.",
+   "metadata": {
+    "cell_id": "10d4d4a30d2d4bdcbc43ac7b87ee4910",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 821.0999755859375
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Model",
+   "metadata": {
+    "cell_id": "ef69aba0f57240e0afe9224a2ba62b54",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "Below you will find the message model that is used for the exchange (request-response):",
+   "metadata": {
+    "cell_id": "c3ddfca7160f44d88b31996d23949ed3",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "tags": [],
@@ -10,11 +70,31 @@
     "execution_millis": 108,
     "cell_id": "00003-e7a517cd-8f91-4a18-a19a-776ccc7d4168",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 279
+    "deepnote_cell_height": 261
    },
-   "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n",
+   "source": "from typing import Optional\nfrom pydantic import BaseModel\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Order Fulfillment API(s)",
+   "metadata": {
+    "cell_id": "b63d1855c86f45c3b31af5426ca52afd",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "The following code block contains the API definitions of three microservices (payment, inventory and shipping), implemented using [FastAPI](https://fastapi.tiangolo.com/), a lightweight Python API framework:",
+   "metadata": {
+    "cell_id": "22832b81f50a4c8385c5c0ee0ee55662",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -29,7 +109,7 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 639
    },
-   "source": "from fastapi import FastAPI\n\nimport nest_asyncio\nimport uvicorn\n\napp = FastAPI()\n\n\n@app.put(\"/retrieve_payment/\")\nasync def retrieve_payment(message: Message):\n    message.event = \"Payment_Done\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n@app.put(\"/fetch_goods/\")\nasync def fetch_goods(message: Message):\n    message.event = \"Goods_Fetched\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n@app.put(\"/ship_goods/\")\nasync def ship_goods(message: Message):\n    message.event = \"Goods_Shipped\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\nnest_asyncio.apply()\nuvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
+   "source": "from fastapi import FastAPI\n\nimport nest_asyncio\nimport uvicorn\n\napp = FastAPI()\n\n# Payment microservice API definition\n@app.put(\"/retrieve_payment/\")\nasync def retrieve_payment(message: Message):\n    message.event = \"Payment_Done\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Inventory microservice API definition\n@app.put(\"/fetch_goods/\")\nasync def fetch_goods(message: Message):\n    message.event = \"Goods_Fetched\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Shipping microservice API definition\n@app.put(\"/ship_goods/\")\nasync def ship_goods(message: Message):\n    message.event = \"Goods_Shipped\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Run API server\nnest_asyncio.apply()\nuvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
    "execution_count": null,
    "outputs": []
   },
