--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -13,8 +13,8 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'TEAM10'",
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -29,8 +29,8 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "execution_count": 2,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -45,8 +45,8 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -62,8 +62,8 @@
     "deepnote_cell_height": 74.80000305175781
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
-   "execution_count": 4,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -78,8 +78,8 @@
     "deepnote_cell_height": 405
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
-   "execution_count": 5,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -94,8 +94,8 @@
     "deepnote_cell_height": 711
    },
    "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
-   "execution_count": 6,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -111,14 +111,14 @@
     "deepnote_cell_height": 364.20001220703125
    },
    "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
-   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "text": "Message sent to consumer\n",
      "output_type": "stream"
     }
-   ]
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -131,21 +131,17 @@
     "execution_millis": 10766,
     "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1439.4000244140625,
-    "deepnote_output_heights": [
-     null,
-     611
-    ]
+    "deepnote_cell_height": 1459.5999755859375
    },
    "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
-   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "text": "Received businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Shipped' payload=None\n[Errno 9] Bad file descriptor\n",
      "output_type": "stream"
     }
-   ]
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
