--- a/ipynb/Distributed Systems and Errors/2 Message.ipynb
+++ b/ipynb/Distributed Systems and Errors/2 Message.ipynb
@@ -1,20 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": "# Message-Style",
    "metadata": {
-    "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1649012553023,
-    "execution_millis": 54593,
-    "cell_id": "abfb23b1-57fe-47fc-a6a8-72672142ed4b",
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "tenant = 'TEAM10'",
-   "outputs": [],
-   "execution_count": null
+    "cell_id": "f0cab73640b44804b99190032d594738",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h1"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "*Characteristics:*\n- Collaboration Style: **Events = Choreography**\n- System Style: **Reactive**\n- Communication Style: **Asynchronous (Non-Blocking)**\n- Flow: **-**",
+   "metadata": {
+    "cell_id": "f352eb39461645e5a9520a4288898cff",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 181
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Process / Scenario",
+   "metadata": {
+    "cell_id": "930f695816d041d4a8ac8ccb9cc20a90",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "The following \"Order Fulfilment\" process model depicts the choreography happening among the three microservices defined below.\n\n![](/images/Choreography.png)\n\n### Tasks\nInstruction to run/do the exercise:\n1. You may register on [CloudAMQP for a free RabbitMQ](https://www.cloudamqp.com) instance (optional).\n2. Add the AMQP URL of your own RabbitMQ instance or a provided one to the follwoing textbox:",
+   "metadata": {
+    "cell_id": "f72357a3cc384bb68ec0e8d20b514de8",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 830.183349609375
+   }
   },
   {
    "cell_type": "code",
@@ -26,11 +50,49 @@
     "execution_start": 1649012553025,
     "execution_millis": 54608,
     "cell_id": "00002-7596e2bc-dbcf-4258-a28c-7e34b1654b68",
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "3. Make sure that you run the notebook with the right tenant:",
+   "metadata": {
+    "cell_id": "16f12514efcb447aab85e24e5b87baa5",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 121.39999389648438
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "deepnote_variable_name": "tenant",
+    "deepnote_variable_value": "TEAM10",
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "6083972c",
+    "execution_start": 1649012553023,
+    "execution_millis": 54593,
+    "cell_id": "abfb23b1-57fe-47fc-a6a8-72672142ed4b",
+    "output_cleared": true,
+    "deepnote_cell_type": "input-text"
+   },
+   "source": "tenant = 'TEAM10'",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "4. Run the notebook in Deepnote.\n5. Inspect the Deepnote output.",
+   "metadata": {
+    "cell_id": "1f179bcad29341d189b4ef9ae4aee003",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
   },
   {
    "cell_type": "code",
@@ -42,12 +104,33 @@
     "execution_millis": 54606,
     "is_code_hidden": true,
     "cell_id": "00003-8ba6ea93-0833-48d3-b5b3-751ec71421a1",
+    "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 74.80000305175781
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Model",
+   "metadata": {
+    "cell_id": "b03ec11109e3491ca846cd8b13b0521d",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "Below you will find the message model that is used for the message exchange, including `businessKey` generation using a UUID and `tenant` configuration:",
+   "metadata": {
+    "cell_id": "e29e2c525ba7439e8d54761f94652924",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -58,12 +141,33 @@
     "execution_start": 1649012553028,
     "execution_millis": 29,
     "cell_id": "00004-f463a11a-5f2d-4054-931f-e6284f90df2f",
+    "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 405
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Queues",
+   "metadata": {
+    "cell_id": "9c95ad73422647e6ae4b8ff35a4d88d7",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, the [Pika](https://pika.readthedocs.io) library providing AMQP protocol in Python is used to connect to RabbitMQ and declare three queues `order`, `payment`, and `inventory`:",
+   "metadata": {
+    "cell_id": "05f1a348bf6a43b2bf54064f07cfdfd6",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -74,12 +178,33 @@
     "execution_start": 1649012553059,
     "execution_millis": 1031,
     "cell_id": "00005-fff109ad-9258-4c94-ae61-72ae9851b506",
+    "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 261
+    "deepnote_cell_height": 333
    },
-   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\n\nconnection.close()\n",
-   "outputs": [],
-   "execution_count": null
+   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\n# Connect to RabbitMQ\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n# Declare order queue\nchannel.queue_declare(queue=\"order\")\n# Declare payment queue\nchannel.queue_declare(queue=\"payment\")\n# Declare inventory queue\nchannel.queue_declare(queue=\"inventory\")\n\nconnection.close()\n",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Initial Event",
+   "metadata": {
+    "cell_id": "0218d7df573347928461d4d09869395d",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, an initial event `Order_Placed` is published to mimic a checkout and initialize the choreography:",
+   "metadata": {
+    "cell_id": "b59a526c16334f47ac1c5970a0ac85cb",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -89,20 +214,34 @@
     "source_hash": "a9daf20b",
     "execution_start": 1649012554093,
     "execution_millis": 752,
-    "output_cleared": false,
+    "output_cleared": true,
     "cell_id": "00006-223d52fb-9d13-4ad2-99d0-8bcfeacd038f",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 364.20001220703125
+    "deepnote_cell_height": 297
    },
-   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange='', routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": "Message sent to consumer\n",
-     "output_type": "stream"
-    }
-   ],
-   "execution_count": null
+   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Define and publish (send) the Order_Placed event\nmessage.event = \"Order_Placed\"\nchannel.basic_publish(exchange=\"\", routing_key=\"order\", body=pickle.dumps(message))\nprint(\"Order_Placed message sent.\")\n\nconnection.close()\n",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Subscription of Microservices",
+   "metadata": {
+    "cell_id": "63573f06d43a4254a27f5583d30724db",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, three microservices are imitated, each of which has a subscription of one queue. After a message is received, a subsequent event is queued again.",
+   "metadata": {
+    "cell_id": "fbac90c300404541a9ff17472cd8596f",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -112,20 +251,14 @@
     "source_hash": "430ef540",
     "execution_start": 1649012554852,
     "execution_millis": 7983,
-    "output_cleared": false,
+    "output_cleared": true,
     "cell_id": "00007-855690d6-72cd-4728-86d0-bda14b42ab95",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1126.800048828125
+    "deepnote_cell_height": 1071
    },
-   "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange='', routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange='', routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange='', routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": "Received businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9e0d439e-b380-11ec-b8de-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\n[Errno 9] Bad file descriptor\n",
-     "output_type": "stream"
-    }
-   ],
-   "execution_count": null
+   "source": "import pika, pickle, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Payment microservice callback function\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Inventory microservice callback function\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Shipment microservice callback function\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=\"\", routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Subscriptions on queues\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Run consuming server\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
