--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -1,36 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": "# Messaging with Tracking",
    "metadata": {
-    "cell_id": "70c5e8874e5b48688d0e9e569da214c7",
-    "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1649012533682,
-    "execution_millis": 17,
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "tenant = 'TEAM10'",
-   "outputs": [],
-   "execution_count": null
+    "cell_id": "f29f3ba1141d4605958743132af70fbd",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h1"
+   }
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": "*Characteristics:*\n- Collaboration Style: **Events = Choreography**\n- System Style: **Reactive**\n- Communication Style: **Asynchronous (Non-Blocking)**\n- Flow: **Tracking**",
    "metadata": {
-    "cell_id": "58e044c24e8c4eb392180170939403c0",
-    "deepnote_variable_name": "camunda_eninge_rest",
-    "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "2f31b90",
-    "execution_start": 1649012533700,
-    "execution_millis": 1,
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "outputs": [],
-   "execution_count": null
+    "cell_id": "5d6e1bfb377f4a03b05b7dba94644967",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 181
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Process / Scenario",
+   "metadata": {
+    "cell_id": "a1966427d49144b4bfce2db5aec37338",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "The following \"Order Fulfilment\" process model depicts the tracked choreography.\n\n![](/images/Track-Flow.png)\n\n### Tasks\nInstruction to run/do the exercise:\n1. You may register on [CloudAMQP for a free RabbitMQ](https://www.cloudamqp.com) instance (optional).\n2. Add the AMQP URL of your own RabbitMQ instance or a provided one to the follwoing textbox:",
+   "metadata": {
+    "cell_id": "e1f2748a2de448d18191ae3c71ea0006",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 830.183349609375
+   }
   },
   {
    "cell_type": "code",
@@ -45,8 +53,60 @@
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "3. Make sure that you use the right tenant:",
+   "metadata": {
+    "cell_id": "67cb839af06b4e30a0e2d9621a522c0b",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 69.39999389648438
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "70c5e8874e5b48688d0e9e569da214c7",
+    "deepnote_variable_name": "tenant",
+    "deepnote_variable_value": "TEAM10",
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "6083972c",
+    "execution_start": 1649012533682,
+    "execution_millis": 17,
+    "deepnote_cell_type": "input-text"
+   },
+   "source": "tenant = 'TEAM10'",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "4. Download the process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/REST.bpmn)) and open it in Camunda Modeler.\n5. Deploy the process model with Camunda Modeler to the classroom instance with your **tenant**.",
+   "metadata": {
+    "cell_id": "388aecc03f014853899664f24bf52576",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "58e044c24e8c4eb392180170939403c0",
+    "deepnote_variable_name": "camunda_eninge_rest",
+    "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "2f31b90",
+    "execution_start": 1649012533700,
+    "execution_millis": 1,
+    "deepnote_cell_type": "input-text"
+   },
+   "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -62,8 +122,8 @@
     "deepnote_cell_height": 74.80000305175781
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -78,8 +138,8 @@
     "deepnote_cell_height": 405
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -94,8 +154,8 @@
     "deepnote_cell_height": 711
    },
    "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -111,14 +171,14 @@
     "deepnote_cell_height": 364.20001220703125
    },
    "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "text": "Message sent to consumer\n",
      "output_type": "stream"
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
@@ -133,15 +193,15 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 1459.5999755859375
    },
-   "source": "import pika, pickle, requests, signal, sys\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "source": "import pika, pickle, requests, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "text": "Received businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Shipped' payload=None\n[Errno 9] Bad file descriptor\n",
      "output_type": "stream"
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
